--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,11 @@ h1{
 .list .item.item-accordion.ng-hide-remove {
   display: block !important;
 }
+
+a:link    { 
+    color: #aaaaaa; text-decoration: none
+}
+a:visited {
+    text-decoration: none; color : #aaaaaa;
+}
+
