--- a/trunk/css/style.css
+++ b/trunk/css/style.css
@@ -3,12 +3,15 @@
 	text-align : center
 }
 h3{
+  padding-top: 0.5em;
 	font-size: 3em;
 	line-height: 100%;
+  color: #444444;
 }
 h1{
-	font-size: 14em;
+	font-size: 11em;
 	line-height: 90%;
+  color: #222222;
 }
 .list .item.item-accordion {
   line-height: 38px;
@@ -24,10 +27,12 @@ h1{
   display: block !important;
 }
 
-a:link    { 
-    color: #aaaaaa; text-decoration: none
+a:link  { 
+    color: #444444; text-decoration: none
 }
 a:visited {
-    text-decoration: none; color : #aaaaaa;
+    text-decoration: none; color : #444444;
 }
+.used  {background-color: #dddddd; color:#444444; text-align: center;}
 
+.unUsed {background-color: #ffffffs; text-align: center;}
